Populate a basic page with a code segment.

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,2 +1,13 @@
-h1= title
-p Welcome to #{title}
+h1 Legends of WAT
+
+p A collection of the funny, the shocking, the stuff that just shouldn't happen.
+
+#submission
+  h2= title
+
+  p(class="summary")= summary
+  
+  pre
+    code(data-language="css")
+      #{code}
+    
