--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,12 @@
 !!!
 html
   head
-    title= title
+    title WAT
     link(rel='stylesheet', href='/stylesheets/style.css')
+
+    // Rainbow
+    link(rel='stylesheet', href='/lib/rainbow-1.1.1/themes/blackboard.css')
+    script(type='text/javascript', src='/lib/rainbow-1.1.1/rainbow.js')
+    script(type='text/javascript', src='/lib/rainbow-1.1.1/language/javascript.js')
+    script(type='text/javascript', src='/lib/rainbow-1.1.1/language/css.js')
   body!= body
