Add action buttons to the bottom of the template.

--- a/views/index.jade
+++ b/views/index.jade
@@ -10,4 +10,9 @@ p A collection of the funny, the shocking, the stuff that just shouldn't happen.
   pre
     code(data-language="css")
       #{code}
-    
+
+#actions-container
+  button Submit a WAT
+  button Share this WAT
+  button Tweet this WAT
+
