Install compass; replace default styles.

--- a/views/layout.html
+++ b/views/layout.html
@@ -2,7 +2,13 @@
 <html>
   <head>
     <title>WAT</title>
-    <link rel="stylesheet" href="/stylesheets/style.css" type="text/css">
+    
+    <!-- App Stylesheets -->
+    <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+    <!--[if IE]>
+        <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <![endif]-->
     
     <!-- Rainbow -->
     <link rel="stylesheet" href="/lib/rainbow-1.1.1/themes/blackboard.css" type="text/css">
