--- a/views/layout.html
+++ b/views/layout.html
@@ -17,10 +17,24 @@
     <script src="/lib/rainbow-1.1.1/language/css.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body id="layout">
-    <h1 id="legends_of_wat">Legends of Wat</h1>
-
-    <p>A collection of the funny, the shcoking, the stuff that just shouldn't happen.</p>
+    <div class="container">
+      <div class="row">
+        <div class="span6">
+          <h1 id="legends_of_wat">Legends of Wat</h1>
+        </div>
+        <div class="span6">
+          <p>
+            A humble collection of things in programming that should quite honestly never, ever, ever
+            happen under any circumstances.
+          </p>
+          
+          <p>
+            Brewed in Atlanta with love by <a href="http://twitter.com/farmdawgnation">@farmdawgnation</a>.
+          </p>
+        </div>
+      </div>
     
-    {{html body}}
+      {{html body}}
+    </div>
   </body>
 </html>
