More fleshing out of styles and layout.

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -10,3 +10,15 @@ $baseLineHeight: 22px
 // Container styles
 .container
   +gridSystem-generate
+  
+  margin-top: 1.5em
+  
+  .header-bar
+    border-bottom: 1px solid $grayDarker
+  
+    .site-title
+      text-align: center
+      
+      h1
+        font-size: 3em
+        line-height: 1.4em
