--- a/views/index.html
+++ b/views/index.html
@@ -1,9 +1,9 @@
 <div id="submission">
-  <h2>Test</h2>
+  <h2>${title}</h2>
   
-  <p class="summary">Test</p>
+  <p class="summary">${summary}</p>
   
-  <pre><code data-language="css">#bah { display: none }</code></pre>
+  <pre><code data-language="css">${code}</code></pre>
   
   <div id="actions-container">
     <button>Submit</button>
