--- a/views/layout.html
+++ b/views/layout.html
@@ -18,14 +18,15 @@
   </head>
   <body id="layout">
     <div class="container">
-      <div class="row">
-        <div class="span6">
+      <div class="row header-bar">
+        <div class="span6 site-title">
           <h1 id="legends_of_wat">Legends of Wat</h1>
+          <p id="witty">Now with 32% more Darth Vader!</p>
         </div>
         <div class="span6">
           <p>
             A humble collection of things in programming that should quite honestly never, ever, ever
-            happen under any circumstances.
+            happen under any circumstances. Inspired by the excellent WAT Lightening Talk.
           </p>
           
           <p>
