--- a/views/index.html
+++ b/views/index.html
@@ -1,13 +1,1 @@
-<div id="submission">
-  <h2>${title}</h2>
-  
-  <p class="summary">${summary}</p>
-  
-  <pre><code data-language="css">${code}</code></pre>
-  
-  <div id="actions-container">
-    <button>Submit</button>
-    <button>Share</button>
-    <button>Test</button>
-  </div>
-</div>
+{{partial(submission) "submission"}}
