--- a/views/layout.html
+++ b/views/layout.html
@@ -26,7 +26,8 @@
         <div class="span6">
           <p>
             A humble collection of things in programming that should quite honestly never, ever, ever
-            happen under any circumstances. Inspired by the excellent WAT Lightening Talk.
+            happen under any circumstances. Inspired by the excellent
+            <a href="https://www.destroyallsoftware.com/talks/wat" target="_blank">WAT Lightening Talk</a>.
           </p>
           
           <p>
