--- a/views/layout.html
+++ b/views/layout.html
@@ -25,13 +25,13 @@
         </div>
         <div class="span6">
           <p>
-            A humble collection of things in programming that should quite honestly never, ever, ever
-            happen under any circumstances. Inspired by the excellent
+            A humble collection of the amusing, shocking, and interesting.
             <a href="https://www.destroyallsoftware.com/talks/wat" target="_blank">WAT Lightening Talk</a>.
+            Brewed in Atlanta with love by <a href="http://twitter.com/farmdawgnation">@farmdawgnation</a>.
           </p>
           
           <p>
-            Brewed in Atlanta with love by <a href="http://twitter.com/farmdawgnation">@farmdawgnation</a>.
+            <a href="/compose">Submit your WAT-worthy code.</a>
           </p>
         </div>
       </div>
