Add link placeholder to items.

--- a/views/submission.html
+++ b/views/submission.html
@@ -1,5 +1,5 @@
 <div class="submission">
-  <h2>${title}</h2>
+  <h2>${title} <small><a href="#">(link)</a></small></h2>
   <div class="row">
     <div class="span9 submission-content">
       <p class="summary">${summary}</p>
