--- a/views/submission.html
+++ b/views/submission.html
@@ -22,8 +22,8 @@
       </div>
       
       <div class="submission-actions-container btn-group">
-        <button class="btn">Share</button>
-        <button class="btn">Tweet</button>
+        <button class="btn"><i class="icon-share"></i> Share</button>
+        <button class="btn"><i class="icon-retweet"></i> Tweet</button>
       </div>
       
     </div>
