Add example of error on compose form.

--- a/views/compose.html
+++ b/views/compose.html
@@ -37,11 +37,12 @@
         </div>
       </div>
       
-      <div class="control-group">
+      <div class="control-group error">
         <label class="control-label">Who the heck are you?</label>
         
         <div class="controls">
           <input type="text" class="input-large" placeholder="Insert twitter handle here.">
+          <span class="help-inline">Please enter a valid Twitter handle.</span>
         </div>
       </div>
       
