Fix a script tag typo that broke JS highlighting.

--- a/views/layout.html
+++ b/views/layout.html
@@ -13,7 +13,7 @@
     <!-- Rainbow -->
     <link rel="stylesheet" href="/lib/rainbow-1.1.1/themes/blackboard.css" type="text/css">
     <script src="/lib/rainbow-1.1.1/rainbow.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/lib/raindow-1.1.1/language/javascript.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/lib/rainbow-1.1.1/language/javascript.js" type="text/javascript" charset="utf-8"></script>
     <script src="/lib/rainbow-1.1.1/language/css.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body id="layout">
