Make the submission form do pretty things.

--- a/views/compose.html
+++ b/views/compose.html
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class="span9">
-    <form class="form-vertical">
+    <form class="submission-compose-form">
       <div class="control-group">
         <label class="control-label">Title</label>
         <div class="controls">
@@ -37,12 +37,12 @@
         </div>
       </div>
       
-      <div class="control-group error">
+      <div class="control-group">
         <label class="control-label">Who the heck are you?</label>
         
         <div class="controls">
-          <input type="text" class="input-large" placeholder="Insert twitter handle here.">
-          <span class="help-inline">Please enter a valid Twitter handle.</span>
+          <input type="text" class="twitter-handle input-large" placeholder="Insert twitter handle here.">
+          <span class="help-inline"></span>
         </div>
       </div>
       
