--- a/views/layout.html
+++ b/views/layout.html
@@ -10,6 +10,12 @@
         <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
     <![endif]-->
     
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+    
+    <!-- Application JS -->
+    <script src="/javascripts/app.js" type="text/javascript" charset="utf-8"></script>
+    
     <!-- Rainbow -->
     <link rel="stylesheet" href="/lib/rainbow-1.1.1/themes/blackboard.css" type="text/css">
     <script src="/lib/rainbow-1.1.1/rainbow.js" type="text/javascript" charset="utf-8"></script>
