Add action and method to compose form.

--- a/views/compose.html
+++ b/views/compose.html
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class="span9">
-    <form class="submission-compose-form">
+    <form class="submission-compose-form" method="post" action="/submit">
       <div class="control-group">
         <label class="control-label">Title</label>
         <div class="controls">
