Add code to simulate a successful submission.

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -16,6 +16,7 @@ $iconSpritePath: "/images/glyphicons-halflings.png"
   
   .header-bar
     border-bottom: 1px solid $grayDarker
+    margin-bottom: 10px
   
     .site-title
       text-align: center
