--- a/views/compose.html
+++ b/views/compose.html
@@ -6,7 +6,7 @@
       <div class="control-group">
         <label class="control-label">Title</label>
         <div class="controls">
-          <input type="text" class="input-xxlarge required-for-submission" placeholder="Insert watty title here...">
+          <input name="submission[title]" type="text" class="input-xxlarge required-for-submission" placeholder="Insert watty title here...">
         </div>
       </div>
       
@@ -14,7 +14,7 @@
         <label class="control-label">Language</label>
         
         <div class="controls">
-          <select name="language" class="required-for-submission">
+          <select name="submission[language]" class="required-for-submission">
             <option value="">Select One</option>
             <option value="javascript">Javascript</option>
             <option value="ruby">Ruby</option>
@@ -25,7 +25,7 @@
       <div class="control-group">
         <label class="control-label">What's the story?</label>
         <div class="controls">
-          <textarea class="input-xxlarge required-for-submission" rows="3" placeholder="Explain why this is wat-worthy..."></textarea>
+          <textarea name="submission[summary]" class="input-xxlarge required-for-submission" rows="3" placeholder="Explain why this is wat-worthy..."></textarea>
         </div>
       </div>
       
@@ -33,7 +33,7 @@
         <label class="control-label">Code:</label>
         
         <div class="controls">
-          <textarea class="input-xxlarge required-for-submission" rows="4" placeholder="Show us the goods."></textarea>
+          <textarea name="submission[code]" class="input-xxlarge required-for-submission" rows="4" placeholder="Show us the goods."></textarea>
         </div>
       </div>
       
@@ -41,7 +41,7 @@
         <label class="control-label">Who the heck are you?</label>
         
         <div class="controls">
-          <input type="text" class="twitter-handle input-large required-for-submission" placeholder="Insert twitter handle here.">
+          <input name="submission[author]" type="text" class="twitter-handle input-large required-for-submission" placeholder="Insert twitter handle here.">
           <span class="help-inline"></span>
         </div>
       </div>
