Wire up submission form.
More work to come on this later, but at least it saves stuff now.

--- a/views/compose.html
+++ b/views/compose.html
@@ -14,10 +14,10 @@
         <label class="control-label">Language</label>
         
         <div class="controls">
-          <select name="submission[language]" class="required-for-submission">
+          <select name="submission[languageName]" class="required-for-submission">
             <option value="">Select One</option>
-            <option value="javascript">Javascript</option>
-            <option value="ruby">Ruby</option>
+            <option value="Javascript">Javascript</option>
+            <option value="Ruby">Ruby</option>
           </select>
         </div>
       </div>
