The at sign is no longer a part of the author field.

--- a/views/compose.html
+++ b/views/compose.html
@@ -41,7 +41,10 @@
         <label class="control-label">Who the heck are you?</label>
         
         <div class="controls">
-          <input name="submission[author]" type="text" class="twitter-handle input-large required-for-submission" placeholder="Insert twitter handle here.">
+          <div class="input-prepend">
+            <span class="add-on">@</span>
+            <input name="submission[author]" type="text" class="twitter-handle input-large required-for-submission" placeholder="Insert twitter handle here.">
+          </div>
           <span class="help-inline"></span>
         </div>
       </div>
