--- a/views/submission.html
+++ b/views/submission.html
@@ -16,7 +16,7 @@
         </p>
         <p class="attribution">Submitted By:
           <span>
-            <a href="${authorUrl}" target="_blank">${author}</a>
+            <a href="${authorUrl}" target="_blank">@${author}</a>
           </span>
         </p>
       </div>
