--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -47,6 +47,8 @@ $iconSpritePath: "/images/glyphicons-halflings.png"
       position: relative
       background-color: $grayLighter
       +border-radius(5px)
+
+      border: 1px solid $grayLight
     
       padding: 5px
     
@@ -54,16 +56,20 @@ $iconSpritePath: "/images/glyphicons-halflings.png"
       
       .submission-meta-arrow
         position: absolute
-        z-index: -2
+        z-index: 2
         bottom: 25px
-        left: -10px
+        left: -11px
         
         width: 20px
         height: 20px
         background-color: $grayLighter
         +rotate(45deg)
+
+        border-bottom: 1px solid $grayLight
+        border-left: 1px solid $grayLight
     
     p
+      margin-left: 10px
       font-size: 0.9em
       line-height: 1.3em
       
