Wire up facebook share button.

--- a/views/submission.html
+++ b/views/submission.html
@@ -22,7 +22,7 @@
       </div>
       
       <div class="submission-actions-container btn-group">
-        <button class="btn"><i class="icon-share"></i> Share</button>
+        <button class="facebook-share btn"><i class="icon-share"></i> Share</button>
         <button class="twitter-share btn"><i class="icon-retweet"></i> Tweet</button>
       </div>
       
