--- a/views/compose.html
+++ b/views/compose.html
@@ -48,7 +48,14 @@
           <span class="help-inline"></span>
         </div>
       </div>
-      
+
+      <script type="text/javascript" src="http://www.google.com/recaptcha/api/challenge?k=${recaptchakey}"></script>
+      <noscript>
+         <iframe src="http://www.google.com/recaptcha/api/noscript?k=${recaptchakey}" height="300" width="500" frameborder="0"></iframe><br>
+         <textarea name="recaptcha_challenge_field" rows="3" cols="40"></textarea>
+         <input type="hidden" name="recaptcha_response_field" value="manual_challenge">
+      </noscript>
+
       <button type="submit" class="btn disabled">Submit</button>
   </div>
   <div class="span3">
