Populate real options for language selection.

--- a/views/compose.html
+++ b/views/compose.html
@@ -16,8 +16,14 @@
         <div class="controls">
           <select name="submission[languageName]" class="required-for-submission">
             <option value="">Select One</option>
-            <option value="Javascript">Javascript</option>
+            <option value="CSS">CSS</option>
+            <option value="HTML">HTML</option>
+            <option value="JavaScript">JavaScript</option>
+            <option value="PHP">PHP</option>
+            <option value="Python">Python</option>
             <option value="Ruby">Ruby</option>
+            <option value="Shell">Shell</option>
+            <option value="Other">Other</option>
           </select>
         </div>
       </div>
