Support all of the languages.

--- a/views/layout.html
+++ b/views/layout.html
@@ -19,8 +19,14 @@
     <!-- Rainbow -->
     <link rel="stylesheet" href="/lib/rainbow-1.1.1/themes/blackboard.css" type="text/css">
     <script src="/lib/rainbow-1.1.1/rainbow.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/lib/rainbow-1.1.1/language/javascript.js" type="text/javascript" charset="utf-8"></script>
     <script src="/lib/rainbow-1.1.1/language/css.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/lib/rainbow-1.1.1/language/generic.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/lib/rainbow-1.1.1/language/html.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/lib/rainbow-1.1.1/language/javascript.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/lib/rainbow-1.1.1/language/php.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/lib/rainbow-1.1.1/language/python.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/lib/rainbow-1.1.1/language/ruby.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/lib/rainbow-1.1.1/language/shell.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body id="layout">
     <div class="container">
