Rename the category route to language.

--- a/views/submission.html
+++ b/views/submission.html
@@ -9,9 +9,9 @@
     <div class="span3 submission-meta-container">
       <div class="submission-meta">
         <div class="submission-meta-arrow"></div>
-        <p class="category">Category:
+        <p class="category">Language:
           <span>
-            <a href="/category/${language}">${languageName}</a>
+            <a href="/language/${language}">${languageName}</a>
           </span>
         </p>
         <p class="attribution">Submitted By:
