Implement the pager for the main feed.

--- a/views/index.html
+++ b/views/index.html
@@ -1,1 +1,14 @@
 {{partial(submission) "submission"}}
+
+<ul class="pager">
+  <li class="previous">
+    {{if pagination.olderEnabled}}
+    <a href="${pagination.olderLink}">&larr; Older</a>
+    {{/if}}
+  </li>
+  <li class="next">
+    {{if pagination.newerEnabled}}
+    <a href="${pagination.newerLink}">Newer &rarr;</a>
+    {{/if}}
+  </li>
+</ul>
