Add a minimum height for the submission container.

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -28,6 +28,7 @@ $iconSpritePath: "/images/glyphicons-halflings.png"
 // Submission styles
 .submission
   position: relative
+  min-height: 192px
 
   .submission-actions-container
     width: 166px
