Correct an error in the header blurb.

--- a/views/layout.html
+++ b/views/layout.html
@@ -38,7 +38,7 @@
         <div class="span6">
           <p>
             A humble collection of the amusing, shocking, and interesting.
-            <a href="https://www.destroyallsoftware.com/talks/wat" target="_blank">WAT Lightening Talk</a>.
+            Inspired by the <a href="https://www.destroyallsoftware.com/talks/wat" target="_blank">WAT Lightening Talk</a>.
             Brewed in Atlanta with love by <a href="http://twitter.com/farmdawgnation">@farmdawgnation</a>.
           </p>
           
