--- a/views/layout.html
+++ b/views/layout.html
@@ -32,7 +32,7 @@
     <div class="container">
       <div class="row header-bar">
         <div class="span6 site-title">
-          <h1 id="legends_of_wat">Legends of Wat</h1>
+          <h1 id="legends_of_wat">Watcode</h1>
           <p id="witty">Now with 32% more Darth Vader!</p>
         </div>
         <div class="span6">
