--- a/views/layout.html
+++ b/views/layout.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WAT</title>
-    
+    <title>Watcode</title>
+
+    <meta name="description" content="A collection of amusing, shocking, and interesting code snippets." />
+
     <!-- App Stylesheets -->
     <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
     <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
