--- a/views/compose.html
+++ b/views/compose.html
@@ -11,6 +11,19 @@
       </div>
 
       <div class="control-group">
+        <label class="control-label">Category</label>
+
+        <div class="controls">
+          <select name="submission[category]" class="required-for-submission">
+            <option value="">Select One</option>
+            <option value="Amusing">Amusing</option>
+            <option value="Shocking">Shocking</option>
+            <option value="Interesting">Interesting</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="control-group">
         <label class="control-label">Language</label>
 
         <div class="controls">
