Add category to submission meta fields.

--- a/views/submission.html
+++ b/views/submission.html
@@ -9,7 +9,12 @@
     <div class="span3 submission-meta-container">
       <div class="submission-meta">
         <div class="submission-meta-arrow"></div>
-        <p class="category">Language:
+        <p class="category">Category:
+          <span>
+            <a href="/category/${category}">${category}</a>
+          </span>
+        </p>
+        <p class="language">Language:
           <span>
             <a href="/language/${language}">${languageName}</a>
           </span>
