--- a/views/layout.html
+++ b/views/layout.html
@@ -39,7 +39,8 @@
         </div>
         <div class="span6">
           <p>
-            A humble collection of the amusing, shocking, and interesting.
+            A humble collection of the <a href="/category/Amusing">amusing</a>, <a href="/category/Shocking">shocking</a>, 
+            and <a href="/category/Interesting">interesting</a>.
             Inspired by the <a href="https://www.destroyallsoftware.com/talks/wat" target="_blank">WAT Lightening Talk</a>.
             Brewed in Atlanta with love by <a href="http://twitter.com/farmdawgnation">@farmdawgnation</a>.
           </p>
