Mixpanel tracking of basic events.

--- a/views/compose.html
+++ b/views/compose.html
@@ -14,7 +14,7 @@
         <label class="control-label">Category</label>
 
         <div class="controls">
-          <select name="submission[category]" class="required-for-submission">
+          <select id="submission-category" name="submission[category]" class="required-for-submission">
             <option value="">Select One</option>
             <option value="Amusing">Amusing</option>
             <option value="Shocking">Shocking</option>
@@ -27,7 +27,7 @@
         <label class="control-label">Language</label>
 
         <div class="controls">
-          <select name="submission[languageName]" class="required-for-submission">
+          <select id="submission-language" name="submission[languageName]" class="required-for-submission">
             <option value="">Select One</option>
             <option value="CSS">CSS</option>
             <option value="HTML">HTML</option>
