Create arrow in meta bubble using CSS psudo-elements.

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -55,7 +55,7 @@ $iconSpritePath: "/images/glyphicons-halflings.png"
     
       margin-bottom: 5px
       
-      .submission-meta-arrow
+      > .category:before
         position: absolute
         z-index: 2
         bottom: 25px
@@ -68,6 +68,7 @@ $iconSpritePath: "/images/glyphicons-halflings.png"
 
         border-bottom: 1px solid $grayLight
         border-left: 1px solid $grayLight
+        content: ''
     
     p
       margin-left: 10px
