Properly format HTML code blocks.

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -30,6 +30,16 @@ $iconSpritePath: "/images/glyphicons-halflings.png"
   position: relative
   min-height: 224px
 
+  .submission-content > pre > code > .close
+    float: none
+    opacity: 1
+    font-size: 15px
+    text-shadow: none
+
+    &:hover
+      color: #8DA6CE
+      cursor: auto
+
   .submission-actions-container
     width: 166px
     margin-right: auto
