Collect author email with submission.

--- a/views/compose.html
+++ b/views/compose.html
@@ -68,6 +68,14 @@
         </div>
       </div>
 
+      <div class="control-group">
+        <label class="control-label">Where can we write you?</label>
+
+        <div class="controls">
+          <input name="submission[authorEmail]" type="text" class="input-xxlarge required-for-submission" placeholder="Insert email address.">
+        </div>
+      </div>
+
       <script type="text/javascript" src="http://www.google.com/recaptcha/api/challenge?k=${recaptchakey}"></script>
       <noscript>
          <iframe src="http://www.google.com/recaptcha/api/noscript?k=${recaptchakey}" height="300" width="500" frameborder="0"></iframe><br>
