Add markup and style for footer.

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -14,16 +14,23 @@ $iconSpritePath: "/images/glyphicons-halflings.png"
 
   margin-top: 1.5em
 
-  .header-bar
+  > .header-bar
     border-bottom: 1px solid $grayDarker
     margin-bottom: 10px
 
-    .site-title
+    > .site-title
       text-align: center
 
-      h1
+      > h1
         font-size: 3em
         line-height: 1.4em
+
+  > .footer
+    text-align: center
+
+    > p
+      font-size: 0.8em
+      line-height: 0.8em
 
 // Submission styles
 .submission
