--- a/views/layout.html
+++ b/views/layout.html
@@ -72,6 +72,11 @@
       {{/each}}
 
       {{html body}}
+
+      <div class="row footer">
+        <p>Copyright &copy;2012 Matt Farmer.</p>
+        <a href="https://mixpanel.com/f/partner"><img src="https://mixpanel.com/site_media/images/partner/badge_light.png" alt="Mobile and Web Analytics" /></a>
+      </div>
     </div>
   </body>
 </html>
