Adjust the width of the actions container for admin dashboard.
The publish and delete actions are wider than the FB/Twitter share buttons that appear
in that place on the frontend.

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -94,3 +94,7 @@ $iconSpritePath: "/images/glyphicons-halflings.png"
 
       span
         display: block
+
+  &.admin-submission
+    > div > .submission-meta-container > .submission-actions-container
+      width: 180px
