--- a/views/admin/submission.html
+++ b/views/admin/submission.html
@@ -1,4 +1,4 @@
-<div class="submission" data-submission-id="${id}" data-submission-title="${title}">
+<div class="submission admin-submission" data-submission-id="${id}" data-submission-title="${title}">
   <h2>${title} <small><a class="submission-link" href="/view/${id}">(link)</a></small></h2>
   <div class="row">
     <div class="span9 submission-content">
