Give the publish and delete buttons correct class names.

--- a/views/admin/submission.html
+++ b/views/admin/submission.html
@@ -26,8 +26,8 @@
       </div>
 
       <div class="submission-actions-container btn-group">
-        <button class="facebook-share btn"><i class="icon-ok"></i> Publish</button>
-        <button class="twitter-share btn"><i class="icon-remove"></i> Delete</button>
+        <button class="publish-submission btn"><i class="icon-ok"></i> Publish</button>
+        <button class="delete-submission btn"><i class="icon-remove"></i> Delete</button>
       </div>
 
     </div>
