--- a/views/layout.html
+++ b/views/layout.html
@@ -56,6 +56,12 @@
           <p>
             <a href="/compose">Submit your WAT-worthy code.</a>
           </p>
+
+          {{if currentUser}}
+          <p>
+            Logged in as ${currentUser.username}. <a href="/admin/logout">Log Out</a>
+          </p>
+          {{/if}}
         </div>
       </div>
 
