Implement current user display across pages on the frontend.

--- a/views/layout.html
+++ b/views/layout.html
@@ -59,7 +59,7 @@
 
           {{if currentUser}}
           <p>
-            Logged in as ${currentUser.username}. <a href="/admin/logout">Log Out</a>
+            Logged in as ${currentUser.username} | <a href="/admin/dashboard">Dashboard</a> | <a href="/admin/logout">Log Out</a>
           </p>
           {{/if}}
         </div>
