Make the site title clickable to return to home.

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -26,6 +26,9 @@ $iconSpritePath: "/images/glyphicons-halflings.png"
 
 // Container styles
 .container
+  #legends_of_wat:hover
+    cursor: pointer
+
   +gridSystem-generate
 
   margin-top: 1.5em
