Update introduction text.

--- a/views/layout.html
+++ b/views/layout.html
@@ -47,13 +47,12 @@
         <div class="span6">
           <p>
             A humble collection of the <a href="/category/Amusing">amusing</a>, <a href="/category/Shocking">shocking</a>,
-            and <a href="/category/Interesting">interesting</a>.
-            Inspired by the <a href="https://www.destroyallsoftware.com/talks/wat" target="_blank">WAT Lightening Talk</a>.
+            and <a href="/category/Interesting">interesting</a> bits of code that populate our lives.
             Brewed in Atlanta with love by <a href="http://twitter.com/farmdawgnation">@farmdawgnation</a>.
           </p>
 
           <p>
-            <a href="/compose">Submit your WAT-worthy code.</a>
+            <a href="/compose">Submit your Watcode.</a>
           </p>
 
           {{if currentUser}}
